<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CRM</string>
    <string name="label_today">Hoy</string>
    <!-- Sync Labels// -->
    <string name="sync_label_customers">Clientes</string>
    <string name="sync_label_calendar">Calendario</string>
    <string name="sync_label_lead_opportunities">Iniciativas/Oportunidades</string>
    <string name="sync_label_quotation_sales_orders">Cotizaciones/Pedido de Venta</string>
    <string name="sync_label_phonecalls">llamadas registradas</string>
    <string name="no_notification">No Notificacion</string>
    <string name="at_the_time_of_event">A la hora del evento</string>
    <string name="on_the_day_at">En el día a las %s</string>
    <string name="on_your_working_day_start_time">Siguiente día laborable</string>
    <string name="day_before_at">El día anterior a las %s</string>
    <string name="minutes_before">%s minutos antes</string>
    <string name="custom">Personalizado...</string>
    <string name="error_end_date_small_than_start_date">La fecha de finalización no se puede establecer antes de la fecha de inicio.</string>
    <string name="label_all">Todo</string>
    <string name="label_leads">Iniciativas</string>
    <string name="label_lead">Iniciativa</string>
    <string name="label_opp">Oportunidad</string>
    <string name="label_opportunities">Oportunidades</string>
    <string name="label_quotation">Cotizaciones</string>
    <string name="label_opportunity">Oportunidad</string>
    <string name="label_sale_orders">Pedidos de Ventas</string>
    <string name="label_phone_calls">Llamadas</string>
    <string name="label_logged_calls">Llamadas registradas</string>
    <string name="label_scheduled_calls">Llamadas programadas</string>
    <string name="label_logged_call">Llamada registrada</string>
    <string name="label_scheduled_call">Llamada programada</string>
    <string name="label_log_call">Llamada de registro</string>
    <string name="label_convert_to_opportunity">Convertir a Oportunidad</string>
    <string name="label_create_opportunity">Crear Oportunidad</string>
    <string name="label_convert_to_quotation">Crear Cotizacion</string>
    <string name="label_create_quotation" translatable="false">@string/label_convert_to_quotation</string>
    <string name="label_mark_as_lost">Marcar como perdida</string>
    <string name="label_mark_as_won">Marcar como ganada</string>
    <string name="label_location">Localizacion</string>
    <string name="label_call">Llamar</string>
    <string name="label_call_held">Retenida</string>
    <string name="label_message">Mensaje</string>
    <string name="label_schedule_call">Programar</string>
    <string name="label_meetings">Reunion</string>
    <string name="label_sale_confirm_sale">Confirmar Venta</string>
    <string name="label_sale_create_invoice">Crear Factura</string>
    <string name="label_sale_cancel_order">Cancelar Orden</string>
    <string name="label_sale_new_copy_of_quotation">Nueva copia de la Cotizacion</string>
    <string name="label_mark_done">Marcar como hecho</string>
    <string name="label_tag_new">Nueva</string>
    <string name="label_quotation_created">Cotizacion creado por</string>
    <string name="label_re_schedule">Re-programar</string>
    <string name="label_sync_warning">Necesidad de sincronizar antes de convertir a Oportunidad</string>
    <string name="label_no_customer_found">No se encontraron clientes</string>
    <string name="label_no_location_found">¡No se encontró ubicación!</string>
    <string name="label_no_contact_found">¡No se encontró contacto!</string>
    <string name="label_no_opportunity_found">¡Ninguna oportunidad encontrada!</string>
    <string name="label_no_email_found">¡No se encontró correo electrónico!</string>
    <string name="label_no_logged_calls_found">No se encontraron llamadas registradas</string>
    <string name="label_no_scheduled_calls_found">No se encontraron llamadas programadas</string>
    <string name="label_new_meeting">Nueva Reunion</string>
    <string name="label_edit_meeting">Editar Reunion</string>
    <string name="label_missed_call_from_customer">Llamada perdida del cliente</string>
    <string name="label_manage_order_lines">Administrar líneas de orden</string>
    <string name="label_define_lead">Definir la Iniciativa</string>
    <string name="label_expected_revenue">Ingresos esperados</string>
    <string name="label_at">a</string>
    <string name="label_conversion_action">Acción de conversión</string>
    <string name="toast_information_saved">Información guardada</string>
    <string name="toast_phone_call_marked_done">Llamada telefónica retenida</string>
    <string name="toast_event_marked_done">Evento marcado como hecho</string>
    <string name="toast_image_size_too_large">El tamaño de la imagen es demasiado grande.</string>
    <string name="message_to">Mensaje a %s</string>
    <string name="add_internal_note">Agregar una nota interna</string>
    <string name="internal_note_hint">Agregue una nota interna que no se enviará a los seguidores</string>
    <string name="label_log_note">Nota de registro</string>
    <string name="label_send_message"><u>Enviar mensaje</u></string>
    <string name="label_log_an_internal_note"><u>Registrar nota interna</u></string>
    <string-array name="array_conversation_actions">
        <item>Convert to opportunity</item>
        <item>Merge with existing opportunities</item>
    </string-array>

    <string name="label_send_by_email">Enviar por correo electrónico</string>
    <string name="label_confirm_sale">Confirmar Pedido</string>
    <string name="label_copy_quotation">Copia de la Cotizacion</string>
    <string name="label_no_order_line">No puede confirmar un pedido de venta que no tiene línea</string>
    <string name="label_quotation_confirm">Cotizacion Confirmada</string>
    <string name="label_new_copy_quotation">Nueva copia de la Cotización</string>
    <string name="label_opt_schedule_meeting">Reunion</string>

    <!-- Working day start time -->
    <string name="label_event_marked">Evento marcado</string>
    <string name="toast_marked">marcado</string>
    <string name="about_Company_line3">Licencia bajo los terminos de <a href="http://www.gnu.org/licenses/agpl.html/">GNU Affero General Public License</a></string>
    <string name="about_Company_line4">Linea de la compañia</string>
    <string name="label_opt_schedule_log_call">Llamada Programada/Registrada</string>
    <string name="your_day_is_wide_open">Tu día está libre</string>
    <string name="tap_to_add_meeting">Toca para agregar una reunión</string>
    <string name="confidential">Publico para empleados</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="search">Buscar</string>
    <string name="or">ó</string>
    <string name="subject">Asunto</string>
    <string name="message">Mensaje</string>
    <string name="user_login">USUARIO</string>
    <string name="server_url">URL SERVIDOR</string>
    <string name="database">BASE DE DATOS</string>
    <string name="odoo_version">VERSION</string>
    <string name="timezone">ZONA HORARIA</string>
    <string name="default_color">Color predeterminado</string>
    <string name="delete">Borrar</string>
    <string name="manage_order_lines">Linea de pedido</string>
    <string name="untaxed_amount">Total sin impuestos:</string>
    <string name="taxes">Impuestos:</string>
    <string name="total">Total:</string>
    <string name="quantity">Cantidad</string>
    <string name="unit_price">Precio unitario</string>
    <string name="config_line1_1">Configuración de sincronización</string>
    <string name="config_line1_2">Habilitar o deshabilitar la sincronización de datos</string>
    <string name="config_line2_1">Intervalo de sincronización</string>
    <string name="config_line2_2">Definir la frecuencia con la que se realizará la sincronización</string>
    <string name="config_line3_1">Límite de sincronización de datos</string>
    <string name="config_line3_2">Límite de datos de sincronización</string>
    <string name="config_line3_3">Definir la antigüedad de los datos a sincronizar</string>
    <string name="config_line4_1">Notificaciones</string>
    <string name="config_line4_2">Tono de notificación</string>
    <string name="config_line4_3">Establecer tono de llamada de notificación</string>
    <string name="config_line4_4">Habilitar notificación en la parte superior</string>
    <string name="config_line4_5">Permitir que la aplicación muestre una notificación rápida en la pantalla</string>
    <string name="config_line4_6">Habilitar para permitir que la aplicación muestre notificaciones rápidas en la pantalla</string>
    <string name="config_line5_1">Iniciativa/Oportunidad</string>
    <string name="config_line5_2">Hora de inicio del día</string>
    <string name="config_line5_3">Establezca la hora de inicio de su jornada laboral</string>
    <string name="default_day_start_time">08:00:00</string>
    <!-- string name="day_before_at">Day before at %s</string -->


</resources>
